# haskell-template

./: README.md  haskell-template.cabal
.devcontainer/: Dockerfile
app/: Main.hs  homework01  homework01.hs
