cabal-version:   3.4
name:            haskell-template
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          _
maintainer:      _
category:        Training
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-template-exe
    import:           warnings
    main-is:          Main.hs
    default-language: Haskell2010
    hs-source-dirs:   app, src
    other-modules:    MyLib
    build-depends:    base ^>= 4.18.1
    
library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite haskell-template-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1,
        haskell-template
